[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rgapi"
dynamic = ["version"]
description = "Python API for ripgrep-style file walking and searching"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Jeremy Howard", email = "j@fast.ai"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["fastcore>=1.14.6"]

[project.optional-dependencies]
dev = ["fastship>=0.0.12", "maturin>=1.0,<2.0", "pytest"]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/rgapi"
Repository = "https://github.com/AnswerDotAI/rgapi"
Issues = "https://github.com/AnswerDotAI/rgapi/issues"

[project.entry-points.pyskills]
rgapi = "rgapi.skill"

[project.entry-points.fastaudit_safe_native]
rgapi = "rgapi"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "rgapi._core"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.fastship]
branch = "main"
